[gd_scene load_steps=19 format=3 uid="uid://bq6qm4o33g2vc"]

[ext_resource type="Script" uid="uid://v1c6spol7yya" path="res://scripts/grindstone.gd" id="1_04qjp"]
[ext_resource type="Texture2D" uid="uid://ryidaqtpkka2" path="res://sprites/Grindstone16x16-Sheet.png" id="1_pe5b1"]
[ext_resource type="PackedScene" uid="uid://b36brkot0lgsi" path="res://scenes/FX/spark_particle.tscn" id="2_xs0td"]
[ext_resource type="PackedScene" uid="uid://ckj2w2r14xiur" path="res://scenes/FX/point_smoke.tscn" id="4_hu6vm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igdog"]
atlas = ExtResource("1_pe5b1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pildt"]
atlas = ExtResource("1_pe5b1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv0jh"]
atlas = ExtResource("1_pe5b1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g6sa"]
atlas = ExtResource("1_pe5b1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8jka"]
atlas = ExtResource("1_pe5b1")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e530q"]
atlas = ExtResource("1_pe5b1")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jrpl"]
atlas = ExtResource("1_pe5b1")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmhnw"]
atlas = ExtResource("1_pe5b1")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6djo"]
atlas = ExtResource("1_pe5b1")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pifi4"]
atlas = ExtResource("1_pe5b1")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nci4k"]
atlas = ExtResource("1_pe5b1")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_clceh"]
atlas = ExtResource("1_pe5b1")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vk1s1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igdog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pildt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv0jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g6sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8jka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e530q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jrpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmhnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6djo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pifi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nci4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clceh")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xbhpa"]
radius = 3.0
height = 12.0

[node name="Grindstone" type="Area2D"]
script = ExtResource("1_04qjp")

[node name="SparkParticle" parent="." instance=ExtResource("2_xs0td")]
position = Vector2(0, -8)
rotation = -0.000934997
emitting = false
amount = 64
collision_base_size = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vk1s1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_xbhpa")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_xbhpa")

[node name="PointSmoke" parent="." instance=ExtResource("4_hu6vm")]
position = Vector2(0, -8)
emitting = false
amount = 10

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
